# fennel

./: Cargo.toml  README.md
.forgejo/workflows/: rust.yaml
.github/workflows/: rust.yml
assets/: manifest.toml
crates/fennel-audio/: Cargo.toml
crates/fennel-audio/examples/: playback.rs
crates/fennel-audio/src/: lib.rs  plugin.rs
crates/fennel-core/: Cargo.toml
crates/fennel-core/examples/: hello.rs  hooks.rs  resource_loading.rs
crates/fennel-core/src/: audio.rs  events.rs  graphics.rs  hooks.rs  lib.rs  plugin.rs
crates/fennel-core/src/plugin/: event_handler.rs  mod.rs  system.rs
crates/fennel-core/src/resources/: font.rs  image.rs  mod.rs
crates/fennel-engine/: Cargo.toml
crates/fennel-engine/examples/: game.rs  game.toml
crates/fennel-engine/examples/scenes/: main.scn.ron  test.scn.ron
crates/fennel-engine/src/: app.rs  camera.rs  lib.rs  registry.rs  renderer.rs  scenes.rs  threads.rs  tiles.rs  time.rs
crates/fennel-engine/src/ecs/: sprite.rs  transform.rs
crates/fennel-gpu/: Cargo.toml  build.rs
crates/fennel-gpu/examples/: image_load.rs  pipeline.rs  window.rs
crates/fennel-gpu/shaders/: fragment.glsl  vertex.glsl
crates/fennel-gpu/src/: image.rs  lib.rs  renderer.rs  windowing.rs
crates/fennel-physics/: Cargo.toml
crates/fennel-physics/examples/: plot_gravity.rs
crates/fennel-physics/src/: body.rs  gravity.rs  lib.rs  tests.rs  world.rs
crates/fennel-physics/src/shapes_2d/: mod.rs  position.rs  rigid_body.rs  shapes.rs  velocity.rs
crates/fennel-plugins/: Cargo.toml
crates/fennel-plugins/src/: lib.rs
crates/fennel-resources/: Cargo.toml
crates/fennel-resources/src/: lib.rs  manager.rs  resource.rs  tests.rs
crates/fennel-runtime/: Cargo.toml
crates/fennel-runtime/examples/: game.rs  game.toml
crates/fennel-runtime/examples/scenes/: test.scn.ron
crates/fennel-runtime/src/: app.rs  events.rs  lib.rs  renderer.rs  tests.rs
crates/fennel-runtime/src/ecs/: sprite.rs
examples/: hello.rs
examples/game/: Cargo.toml  game.toml
examples/game/src/: main.rs
fennel-2d/: Cargo.toml
fennel-2d/src/: lib.rs  sprite.rs
fennel-audio/examples/: playback.rs
fennel-audio/src/: lib.rs  plugin.rs
fennel-common/: Cargo.toml
fennel-common/src/: events.rs
fennel-core/: Cargo.toml
fennel-core/examples/: hello.rs  hooks.rs  resource_loading.rs
fennel-core/src/: audio.rs  events.rs  graphics.rs  hooks.rs  lib.rs  tests.rs
fennel-core/src/plugin/: mod.rs  system.rs
fennel-core/src/resources/: font.rs  image.rs  loadable.rs  mod.rs
fennel-engine/: Cargo.toml
fennel-engine/examples/: game.rs  game.toml
fennel-engine/examples/scenes/: main.scn.ron  test.toml
fennel-engine/src/: app.rs  events.rs  lib.rs  registry.rs  renderer.rs  runtime.rs  scenes.rs
fennel-engine/src/components/: input.rs  mod.rs  sprite.rs
fennel-engine/src/ecs/: input.rs  mod.rs  scene.rs  sprite.rs  transform.rs
fennel-engine/src/tests/: ecs.rs  mod.rs
fennel-gpu/: Cargo.toml
fennel-gpu/examples/: image_load.rs  window.rs
fennel-gpu/src/: renderer.rs  vertex.rs  windowing.rs
fennel-graphics/: Cargo.toml
fennel-graphics/examples/: hello.rs  hooks.rs  resource_loading.rs
fennel-graphics/src/: graphics.rs
fennel-graphics/src/plugin/: event_handler.rs
fennel-graphics/src/resources/: font.rs  mod.rs
fennel-physics/: Cargo.toml
fennel-physics/src/: aabb.rs  lib.rs  tests.rs  world.rs
fennel-plugins/src/: lib.rs
fennel-registry/: Cargo.toml
fennel-registry/src/: lib.rs
fennel-resources/: Cargo.toml
fennel-resources/src/: lib.rs  manager.rs  resource.rs  tests.rs
fennel-runtime/: Cargo.toml
fennel-runtime/examples/: game.rs  game.toml
fennel-runtime/examples/scenes/: main.scn.ron
fennel-runtime/src/: app.rs  lib.rs  scenes.rs  tests.rs
src/: audio.rs  events.rs  graphics.rs  lib.rs  tests.rs
src/ecs/: mod.rs
src/resources/: loadable.rs  mod.rs
tests/: Cargo.toml
tests/src/: tests.rs
