[package]
name = "fennel-engine"
version = "1.1.0"
edition = "2024"
repository = "https://github.com/w1ltshire/fennel.git"
license = "MIT"
description = "A small 2D game framework I'm building just-for-fun and to learn Rust a little bit deeper"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
env_logger = "0.11.8"
image = "0.25.8"
imgui = "0.12.0"
imgui-sdl3 = "0.4.0"
quick-error = "2.0.1"
rand = "0.9.2"
rodio = "0.21.1"
sdl3 = { version = "0.15.1", features = ["test-mode", "ttf"] } 
specs = "0.20.0"
tokio = { version = "1.47.1", features = ["full"] }
