[package]
name = "fennel-core"
version = "0.5.1"
edition = "2024"
repository = "https://codeberg.org/wiltshire/fennel.git"
license = "MIT"
description = "Core package of Fennel game engine providing rendering and audio"
rust-version = "1.87.0"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
image = "0.25.8"
imgui = "0.12.0"
imgui-sdl3 = "0.4.0"
log = "0.4.28"
quick-error = "2.0.1"
rand = "0.9.2"
rodio = "0.21.1"
sdl3 = { version = "0.15.1", features = ["test-mode", "ttf"] } 
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.8"
zip = "6.0.0"
