[package]
name = "fennel-engine"
version = "1.3.0"
edition = "2024"
repository = "https://github.com/w1ltshire/fennel.git"
license = "MIT"
description = "Main package of Fennel game engine providing higher level API"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
fennel-common = { version = "0.1.0", path = "../fennel-common/" }
fennel-core = { version = "0.2.0", path = "../fennel-core" }
specs = "0.20.0"
tokio = { version = "1.47.1", features = ["full"] }
