[package]
name = "fennel-engine"
version = "1.5.0"
edition = "2024"
repository = "https://codeberg.org/wiltshire/fennel.git"
license = "MIT"
description = "Main package of Fennel game engine providing higher level API"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
fennel-core = { version = "0.3.0", path = "../fennel-core" }
ron = "0.11.0"
sdl3 = "0.15.1"
serde = { version = "1.0.228", features = ["derive"] }
specs = { version = "0.20.0", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.8"
