[package]
name = "fennel-runtime"
version = "1.8.0"
edition = "2024"
repository = "https://github.com/w1ltshire/fennel.git"
license = "MIT"
description = "Main package of Fennel game engine providing higher level API"
rust-version = "1.87.0"

[dependencies]
anyhow = "1.0.100"
fennel-plugins = { version = "0.1.0", path = "../fennel-plugins" }
fennel-registry = { version = "0.1.0", path = "../fennel-registry" }
log = "0.4.28"
ron = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
specs = { version = "0.20.0", features = ["derive", "parallel"] }
toml = "0.9.8"
