[package]
name = "fennel-core"
version = "0.5.1"
edition = "2024"
repository = "https://codeberg.org/wiltshire/fennel.git"
license = "MIT"
description = "Core package of Fennel game engine providing rendering and audio"
rust-version = "1.87.0"

[dependencies]
anyhow = "1.0.100"
image = "0.25.8"
imgui = "0.12.0"
imgui-sdl3 = "0.4.1"
log = "0.4.28"
rodio = "0.21.1"
sdl3 = { version = "0.16", features = ["test-mode", "ttf"] } 
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
fennel-plugins = { version = "0.1.0", path = "../fennel-plugins" }
specs = "0.20.0"
kanal = "0.1.1"