[package]
name = "fennel-engine"
version = "1.8.0"
edition = "2024"
repository = "https://codeberg.org/wiltshire/fennel.git"
license = "MIT"
description = "Main package of Fennel game engine providing higher level API"
rust-version = "1.87.0"

[dependencies]
anyhow = "1.0.100"
fennel-core = { version = "0.5.0", path = "../fennel-core" }
kanal = "0.1.1"
log = "0.4.28"
ron = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
specs = { version = "0.20.0", features = ["derive", "parallel"] }
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
env_logger = "0.11.8"
sdl3 = "0.16.2"