[package]
name = "fennel-gpu"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "This crate provided low-level graphics functionality for the Fennel game engine."
repository = "https://codeberg.org/wiltshire/fennel.git"

[dependencies]
sdl3 = "0.16.2"
anyhow = "1.0.100"
sdl3-image-sys = "0.2.0"

[build-dependencies]
shaderc = "0.10.1"